web ui: disable shadow copy Refs #175

--- a/root/usr/share/nethesis/NethServer/Help/it/NethServer_Module_SharedFolder_Plugin_Samba.html
+++ b/root/usr/share/nethesis/NethServer/Help/it/NethServer_Module_SharedFolder_Plugin_Samba.html
@@ -16,10 +16,10 @@
                 <dd>Descrivi <tt>Abilita</tt> qui..</dd>
                 <dt class="KeepVersions" >KeepVersions_enabled_label</dt>
                 <dd>Descrivi <tt>KeepVersions_enabled_label</tt> qui..</dd>
-                <dt class="ShadowCopy" >Disabilita</dt>
-                <dd>Descrivi <tt>Disabilita</tt> qui..</dd>
+<!--                <dt class="ShadowCopy" >Disabilita</dt>
+                <dd>Descrivi <tt>Disabilita</tt> qui..</dd> 
                 <dt class="ShadowCopy" >Abilita</dt>
-                <dd>Descrivi <tt>Abilita</tt> qui..</dd>
+                <dd>Descrivi <tt>Abilita</tt> qui..</dd> -->
             </dl>
         </div>
     </body>
